# tool_webdata2esp

./: .gitignore  MANIFEST.in  README.md  cli.py  config.ini  core.py  html2CString.py  min_css.py  min_html.py  min_js.py  pyproject.toml  requirements.txt  setup.py  webdata2esp.py
example_arduino/: example_arduino.ino
example_web/: after_load.js  index.css
example_web/languages/: EN.json  EN.py  RU.py
example_web/webif_libs/languages/: EN.py  RU.py
fast_run/: example.sh  wfnli.sh  wfr.sh
tool_webdata2esp/: cli.py  core.py  min_html.py  min_js.py
tool_webdata2esp/example_web/: functions_wfnli.js  index.html
tool_webdata2esp/example_web/languages/: RU.json
tool_webdata2esp/example_web/webif_libs/: functions_embedded.js
tool_webdata2esp/fast_run/: wfnli.sh  wfr.sh
