[project]
name = "tool_webdata2esp"
description = "The package for preparing web data for loading into ESP8266"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.1.4"
authors = [
    { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
license = { file = "LICENSE.txt" }
maintainers = [
   { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: LGPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]
web2esp = "tool_webdata2esp.cli:run"

[build-system]
requires = ["setuptools", "wheel"]